5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1793_3124.log
== SUBMITION (2019-05-30 18:34:15) 
-- CODE:
from numpy import*
vetor= 
-- EXECUTION TIME:
0.159175
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 2
    vetor= 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:01:00) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+y[i]
		i=i+1
		print(round m,2 )
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:01:32) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+y[i]
		i=i+1
		print(round(m,2 ))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:01:35) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+y[i]
		i=i+1
		print(round(m,2 ))
-- EXECUTION TIME:
0.192796
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:01:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+y[i]
	i=i+1
		print(round(m,2 ))
-- ERROR:
File "XXXX", line 8
    print(round(m,2 ))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:01:47) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+y[i]
		i=i+1
		print(round(m,2 ))
-- EXECUTION TIME:
0.162252
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:09) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=n+y[i]
		i=i+1
		print(round(m,2 ))
-- EXECUTION TIME:
0.119492
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:11) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=n+y[i]
		i=i+1
		print(round(m,2 ))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:03:00) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
		print(round(m,2 ))
-- EXECUTION TIME:
0.159407
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:03:19) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
		print(round(m,2))
-- EXECUTION TIME:
0.15646
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:37) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
		print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:45) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
		print(round(m,2))
-- ERROR:
File "XXXX", line 8
    print(round(m,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:52) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:04:08) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.571694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:10) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:04:15) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.645347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:16) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:16) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:04:16) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
1.43545
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:16) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:04:17) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
2.77989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:04:17) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
3.44604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:04:18) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
3.11148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:04:19) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
4.33741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:04:19) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.855943
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/3124/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:31) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:19) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:05:22) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.385973
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:56) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")))
n= size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:06:33) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")))
n= size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:06:36) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")))
n= size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.135011
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:06:36) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")))
n= size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:20) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")))
n= size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
	print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:37) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")))
n= size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i-1
	print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i-1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:07:39) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")))
n= size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i-1
	print(round(m,2))
-- EXECUTION TIME:
0.23172
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i-1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:46) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")))
n= size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
	print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:02) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
	print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:30) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
	print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:54) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
	print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:09:16) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
	print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:09:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
	print(round(m,2))
-- EXECUTION TIME:
0.465391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:09:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
	print(round(m,2))
-- EXECUTION TIME:
1.31337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:09:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
	print(round(m,2))
-- EXECUTION TIME:
1.43219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:09:25) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
	print(round(m,2))
-- EXECUTION TIME:
1.46319
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:18) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.470321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
0.423672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:23) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:28) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
0.491806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:28) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:28) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:28) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:29) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
0.952886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:30) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
2.33872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:31) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:31) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
2.77329
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:32) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
2.08377
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:33) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
3.43132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:34) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
4.01532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:34) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
2.99147
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:05) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:12:07) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.147781
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:08) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:23) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+I
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+I
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:40) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:43) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:43) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:14:49) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:31) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:53) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:16:28) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i-1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i-1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:16:36) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:17:50) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i>size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:18:34) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:37) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.156978
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:38) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.15544
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:38) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.341761
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:38) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.286406
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:39) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.444995
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:39) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- EXECUTION TIME:
0.411741
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:20:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=>0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    i=>0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:18) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=>0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    i=>0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:18) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=>0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    i=>0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:18) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=>0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    i=>0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:25) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:58) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:00) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:00) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:10) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:24:05) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:24:44) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- EXECUTION TIME:
0.388511
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
41.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
29.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
20.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:24:54) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:25:32) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- EXECUTION TIME:
0.48954
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
41.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
29.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
20.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:25:37) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- EXECUTION TIME:
0.423084
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
41.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
29.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
20.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:04) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:51) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:27:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:28:13) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:28:14) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:28:28) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
		i=i+1
print(round(m,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:29:02) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:30:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:31:15) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- EXECUTION TIME:
0.394074
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
41.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
29.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
20.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:31:20) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:31:30) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i>size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:31:56) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i>size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- EXECUTION TIME:
0.466876
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
7
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
6
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:31:57) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i>size(v)):
	n=n+v[i]
	i=i+1
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:27) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i>size(v)):
	n=n+v[i]
	i=i+1
print(round(n, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:50) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:01) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n<size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n<size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:12) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:22) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:23) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:24) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:52) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:01) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n<size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n<size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:08) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n>size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n>size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:13) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:28) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:12) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
n=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:24) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n<size(v)
i=0
n=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n<size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:32) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
n=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:06) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:39) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: "))))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:38:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:38:25) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
0.38316
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
33864.17
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
1275.52
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
149.74
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:38:49) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
n=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:33) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:39) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
		i=i+1
print(round(m, 2))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:40:07) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
0.516758
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
33864.17
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
1275.52
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
149.74
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:40:33) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: "))))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:09) 
-- CODE:
from numpy import*
v=array(float(eval(input("digite n numeros: "))))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:45) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:10) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m/v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:41) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m/v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
0.450836
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:55) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m/v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:45:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m/v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
0.45432
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:46:33) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:18) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:49) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:48:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- EXECUTION TIME:
0.492445
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
35.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
24.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
16.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:48:36) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:49:05) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m-v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:49:50) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:49:51) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros: ")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
